ingress-monitoring-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx 
  name: ingress-cattle-monitoring-system-namespace
  namespace: cattle-monitoring-system
spec:
  rules:
  - host: graf.kkit.space
    http:
      paths:
      - backend:
          service:
            name: rancher-monitoring-grafana 
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - graf.kkit.space
    secretName: tls-ingress-cattle-monitoring-system-namespace
